# curiosity

./: .gitignore  README.md  chat_agent.py  curiosity.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
static/: minimal-theme-switcher.js
