[project]
name = "curiosity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==1.1.0",
    "langchain-community==0.4.1",
    "langchain-groq==1.1.0",
    "langchain-openai==1.1.0",
    
    "langgraph==1.0.4",
    "langgraph-checkpoint-sqlite==3.0.0",
    "openai>=2.8.1",
    "python-fasthtml==0.12.35",
    "shortuuid>=1.0.13",
    "tavily>=1.1.0",
]
